--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-pose": "^3.3.3"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.1.1",
     "webpack": "^4.8.3"
   },
   "name": "landing_likhachev",
