--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "outDir": "./build/js",
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "jsx": "react"
   },
-  "exclude": [
-    "node_modules"
+  "include": [
+    "./static/js/**/*"
   ]
 }
