--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "scripts": {
-    "install": "npm install"
-  },
-  "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-pose": "^3.3.3"
-  },
-  "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.1.1",
-    "webpack": "^4.8.3"
-  },
-  "name": "landing_likhachev",
+  "name": "self_landing",
   "version": "1.0.0",
-  "main": "gulpfile.js",
+  "description": "",
+  "main": "static/index.html",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack -p"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/catchyn/dictionary_bic.git"
+    "url": "git+https://github.com/catchyn/landing.git"
   },
-  "author": "alikhachev",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/catchyn/dictionary_bic/issues"
+    "url": "https://github.com/catchyn/landing/issues"
   },
-  "homepage": "https://github.com/catchyn/dictionary_bic#readme",
-  "description": ""
+  "homepage": "https://github.com/catchyn/landing#readme",
+  "dependencies": {
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.2.2",
+    "typescript": "^3.1.3",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
