--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./build/js",
+    "outDir": "./build/",
     "module": "commonjs",
+    "noImplicitAny": true,
     "target": "es5",
     "sourceMap": true,
     "jsx": "react"
   },
   "include": [
-    "./static/js/**/*"
+    "./static/js/**/*", "static/js/app.tsx"
   ]
 }
