--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "static/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -p"
+    "start": "webpack -p",
+    "start:dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -25,15 +26,14 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.4",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.3",
     "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
