--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
   },
   "homepage": "https://github.com/catchyn/landing#readme",
   "dependencies": {
+    "decko": "^1.2.0",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "resize-observer-polyfill": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
