--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noImplicitAny": true,
     "target": "es5",
     "sourceMap": true,
-    "jsx": "react"
+    "jsx": "react",
+    "experimentalDecorators": true
   },
   "include": [
     "./static/js/**/*", "static/js/app.tsx"
